apps/asset-service/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: asset-service
  labels:
    app: asset-service
spec:
  type: ClusterIP
  ports:
    - port: 8083
      targetPort: 8083
      protocol: TCP
      name: http
  selector:
    app: asset-service
